<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_radio"
            android:icon="@mipmap/ic_radio_black_24dp"
            android:title="@string/radio">
        </item>

        <item
            android:id="@+id/nav_schedule"
            android:icon="@mipmap/ic_schedule_black_24dp"
            android:title="@string/schedule">
        </item>

        <item
            android:id="@+id/nav_about_us"
            android:icon="@mipmap/ic_supervisor_account_black_24dp"
            android:title="@string/about_us">
        </item>

        <item
            android:id="@+id/nav_twitter"
            android:icon="@mipmap/ic_share_black_24dp"
            android:title="@string/twitter">
        </item>

        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/ic_share_black_24dp"
            android:title="@string/share">
        </item>

    </group>

    <item android:title="More">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@mipmap/ic_exit_to_app_black_24dp"
                    android:title="@string/exit"></item>
            </group>
        </menu>
    </item>
</menu>